# tag_lib_bench_rs

./: Cargo.toml  full_test.flac
benches/: tag_reader.rs
report/: index.html
report/_lofty_/: history.html  index.html
report/_metaflac_/: history.html  index.html
src/: main.rs
