[package]
name = "tag_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
lofty = "0.11.0"
metaflac = "0.2.5"
plotters = "0.3.1"
symphonia = "0.5.2"
taglib = { git = "https://github.com/ebassi/taglib-rust" }
[[bench]]
name = "tag_reader"
harness = false
